--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,11 +1,8 @@
+//This will be the primary
 $font-stack: Arial, Helvetica, sans-serif;
 //This will be primary colour, for now chosen green because the default is white
 $primary-color: #00e673;
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
-  h1 {
-    font-size: 20px;
-    color: rgb(68, 0, 255);
-  }
+  font: 100% $font-stack;
 }
