trying to change background

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,6 +5,7 @@ $primary-color: #00e673;
 
 body {
   font: 100% $font-stack;
+  background-color: $primary-color
   h1{
     color: $primary-color;
   }
