--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,9 @@
 body{
-    background-color: $primary-color;
+    background-color: #00e673;
+    
+    
+}
+h2{
+    background-color: yellow;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
