SASS works on HTML, however not updating CSS

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,5 +1,3 @@
-//This will be the primary
-$font-stack: Arial, Helvetica, sans-serif;
-//This will be primary colour, for now chosen green because the default is white
-$primary-color: #00e673;
-
+body{
+  background-color: yellow;
+}
