--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,3 +1,43 @@
-body{
-  background-color: yellow;
+$color-main: #00e673; //this will be the main colour of the website
+$font: Arial,
+Helvetica,
+sans-serif; //this will be the font of website
+$header-background: #4d4dff; //This will be the colour of my header
+$header-fontcolor: #ffffff;
+body {
+  padding: 0;
+  margin: 0;
+  background-color: $color-main
+}
+
+// This is Global
+.container {
+  width: 80%;
+  margin: auto;
+  overflow: hidden;
+}
+
+//header
+header {
+  background: $header-background;
+  padding-top: 30px;
+  min-height: 70px;
+  border-bottom: red 3px solid;
+}
+
+header a {
+  color: white;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 16;
+}
+header ul{
+  margin: 0;
+  padding:0;
+}
+
+header li{
+  float: left;
+  display: inline;
+  padding: 0 20px 0 20px;
 }
