--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,41 +3,27 @@ $font: Arial,
 Helvetica,
 sans-serif; //this will be the font of website
 $header-background: #4d4dff; //This will be the colour of my header
-$header-fontcolor: #ffffff;
-body {
-  padding: 0;
-  margin: 0;
-  background-color: $color-main
-}
 
-// This is Global
-.container {
-  width: 80%;
-  margin: auto;
-  overflow: hidden;
-}
-
-//header
-header {
-  background: $header-background;
-  padding-top: 30px;
-  min-height: 70px;
-  border-bottom: red 3px solid;
-}
-
-header a {
+body{
   color: white;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-size: 16;
-}
-header ul{
-  margin: 0;
-  padding:0;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
 }
 
-header li{
-  float: left;
-  display: inline;
-  padding: 0 20px 0 20px;
+#content{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr; //these are the columns they can have different widths, also fr means fraction
+ //grid-template-columns: repeat(9, 1fr) this is useful if I got lots of columns e.g. 9
+ // grid-auto-rows: 200px; this gives a set size of the boxes so content will get cut off
+ grid-auto-rows: minmax(200px, auto);
+ max-width: 960px;
+  margin: 0 auto;
+}
+
+#content div{
+  background: purple;
+  padding: 30px
+}
+#content div:nth-child(even){
+  background: blue;
 }
