--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -3,27 +3,44 @@ $font: Arial,
 Helvetica,
 sans-serif; //this will be the font of website
 $header-background: #4d4dff; //This will be the colour of my header
-
-body{
+body {
   color: white;
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
 }
 
-#content{
+#content {
+  
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr; //these are the columns they can have different widths, also fr means fraction
- //grid-template-columns: repeat(9, 1fr) this is useful if I got lots of columns e.g. 9
- // grid-auto-rows: 200px; this gives a set size of the boxes so content will get cut off
- grid-auto-rows: minmax(200px, auto);
- max-width: 960px;
+  grid-template-columns: repeat(12,1fr);
+  grid-auto-rows: minmax(100px, auto); //min height will be 100px, max is auto
+  grid-gap: 10px; //puts a gap between boxes
+  max-width: 960px;
   margin: 0 auto;
 }
 
-#content div{
-  background: purple;
+#content>* {
+  background: rgb(20, 197, 173);
   padding: 30px
 }
-#content div:nth-child(even){
-  background: blue;
+header{
+  grid-column: 1/13;
+}
+main{
+  grid-column: 4/13;
+  grid-row: 2/4;
+}
+aside{
+  grid-column: 1/4;
+}
+section{
+  grid-column: 1/13;
+  grid-row: 4/6;
+}
+nav{
+  grid-column: 1/4;
+}
+
+footer{
+  grid-column: 1/13;
 }
