--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,46 +1,66 @@
-$color-main: #00e673; //this will be the main colour of the website
-$font: Arial,
-Helvetica,
-sans-serif; //this will be the font of website
-$header-background: #4d4dff; //This will be the colour of my header
-body {
-  color: white;
-  font-family: Arial, Helvetica, sans-serif;
-  text-align: center;
+html {
+  box-sizing: border-box;
 }
 
-#content {
-  
-  display: grid;
-  grid-template-columns: repeat(12,1fr);
-  grid-auto-rows: minmax(100px, auto); //min height will be 100px, max is auto
-  grid-gap: 10px; //puts a gap between boxes
-  max-width: 960px;
+body {
+  font-family: monospace;
+  padding: 0;
+  margin: 0;
+  background: pink;
+}
+
+*,
+*:before,
+*after {
+  box-sizing: inherit; //This will inherit the property from the HTML
+}
+
+.grid {
+  width: 100%;
+  max-width: 1100px;
   margin: 0 auto;
 }
 
-#content>* {
-  background: rgb(20, 197, 173);
-  padding: 30px
-}
-header{
-  grid-column: 1/13;
-}
-main{
-  grid-column: 4/13;
-  grid-row: 2/4;
-}
-aside{
-  grid-column: 1/4;
-}
-section{
-  grid-column: 1/13;
-  grid-row: 4/6;
-}
-nav{
-  grid-column: 1/4;
+.grid:before,
+.grid:after,
+.row:before,
+.row:after {
+  content: " ";
+  display: table;
 }
 
-footer{
-  grid-column: 1/13;
+.grid:after,
+.row:after {
+  clear: both;
+}
+
+[class*='col-'] {
+  width: 100%;
+  float: left;
+  min-height: 1px;
+}
+
+// 100/total column*current column = percentage
+.col-1 {width: 8.33333%;}
+.col-2{width: 16.66667%;}
+.col-3{width: 25%;}
+.col-4{width: 33.33333%;}
+.col-5{width:41.66667%;}
+.col-6{width:50%;}
+.col-7{width: 58.33333%;}
+.col-8{width: 66.66667%;}
+.col-9{width: 75%;}
+.col-10{width: 83.33333%;}
+.col-11{width: 91.66667%;}
+.col-12{width: 100%;}
+
+
+.col {
+  padding: 1em;
+  margin: 8px;
+  background: white;
+  border-radius: 3px;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 3);
+  color: blueviolet;
+  text-align: center;
 }
