--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -40,21 +40,6 @@ body {
   min-height: 1px;
 }
 
-// 100/total column*current column = percentage
-.col-1 {width: 8.33333%;}
-.col-2{width: 16.66667%;}
-.col-3{width: 25%;}
-.col-4{width: 33.33333%;}
-.col-5{width:41.66667%;}
-.col-6{width:50%;}
-.col-7{width: 58.33333%;}
-.col-8{width: 66.66667%;}
-.col-9{width: 75%;}
-.col-10{width: 83.33333%;}
-.col-11{width: 91.66667%;}
-.col-12{width: 100%;}
-
-
 .col {
   padding: 1em;
   margin: 8px;
@@ -64,3 +49,164 @@ body {
   color: blueviolet;
   text-align: center;
 }
+
+//mobile
+@media screen and (max-width: 420px) {
+  // 100/total column*current column = percentage
+  .col-wd-1 {
+    width: 8.33333%;
+  }
+  .col-wd-2 {
+    width: 16.66667%;
+  }
+  .col-wd-3 {
+    width: 25%;
+  }
+  .col-wd-4 {
+    width: 33.33333%;
+  }
+  .col-wd-5 {
+    width: 41.66667%;
+  }
+  .col-wd-6 {
+    width: 50%;
+  }
+  .col-wd-7 {
+    width: 58.33333%;
+  }
+  .col-wd-8 {
+    width: 66.66667%;
+  }
+  .col-wd-9 {
+    width: 75%;
+  }
+  .col-wd-10 {
+    width: 83.33333%;
+  }
+  .col-wd-11 {
+    width: 91.66667%;
+  }
+  .col-wd-12 {
+    width: 100%;
+  }
+}
+
+//Tablets
+@media screen and (min-width: 768px) {
+  // 100/total column*current column = percentage
+  .col-md-1 {
+    width: 8.33333%;
+  }
+  .col-md-2 {
+    width: 16.66667%;
+  }
+  .col-md-3 {
+    width: 25%;
+  }
+  .col-md-4 {
+    width: 33.33333%;
+  }
+  .col-md-5 {
+    width: 41.66667%;
+  }
+  .col-md-6 {
+    width: 50%;
+  }
+  .col-md-7 {
+    width: 58.33333%;
+  }
+  .col-md-8 {
+    width: 66.66667%;
+  }
+  .col-md-9 {
+    width: 75%;
+  }
+  .col-md-10 {
+    width: 83.33333%;
+  }
+  .col-md-11 {
+    width: 91.66667%;
+  }
+  .col-md-12 {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width:992px) {
+  .col-sm-1 {
+    width: 8.33333%;
+  }
+  .col-sm-2 {
+    width: 16.66667%;
+  }
+  .col-sm-3 {
+    width: 25%;
+  }
+  .col-sm-4 {
+    width: 33.33333%;
+  }
+  .col-sm-5 {
+    width: 41.66667%;
+  }
+  .col-sm-6 {
+    width: 50%;
+  }
+  .col-sm-7 {
+    width: 58.33333%;
+  }
+  .col-sm-8 {
+    width: 66.66667%;
+  }
+  .col-sm-9 {
+    width: 75%;
+  }
+  .col-sm-10 {
+    width: 83.33333%;
+  }
+  .col-sm-11 {
+    width: 91.66667%;
+  }
+  .col-sm-12 {
+    width: 100%;
+  }
+}
+// Wide Screens 
+@media (min-width : 1200px) {
+  .col-sm-1 {
+    width: 8.33333%;
+  }
+  .col-sm-2 {
+    width: 16.66667%;
+  }
+  .col-sm-3 {
+    width: 25%;
+  }
+  .col-sm-4 {
+    width: 33.33333%;
+  }
+  .col-sm-5 {
+    width: 41.66667%;
+  }
+  .col-sm-6 {
+    width: 50%;
+  }
+  .col-sm-7 {
+    width: 58.33333%;
+  }
+  .col-sm-8 {
+    width: 66.66667%;
+  }
+  .col-sm-9 {
+    width: 75%;
+  }
+  .col-sm-10 {
+    width: 83.33333%;
+  }
+  .col-sm-11 {
+    width: 91.66667%;
+  }
+  .col-sm-12 {
+    width: 100%;
+  }
+  
+      }
