--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,7 +1,7 @@
+
 html {
   box-sizing: border-box;
 }
-
 body {
   font-family: monospace;
   padding: 0;
@@ -17,7 +17,7 @@ body {
 
 .grid {
   width: 100%;
-  max-width: 1100px;
+  display: table;
   margin: 0 auto;
 }
 
@@ -41,110 +41,181 @@ body {
 }
 
 .col {
-  padding: 1em;
-  margin: 8px;
-  background: white;
-  border-radius: 3px;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 3);
-  color: blueviolet;
+  float: left;
+  padding: 15px;
+  border: 1px solid red;
+  background-color: whitesmoke;
   text-align: center;
+  margin: 8px;
+  border-radius: 3px;
+  color: yellowgreen;
+  
+
 }
 
+
 /* For mobile phones: */
+
 [class*="col-"] {
   width: 100%;
 }
-@media only screen and (min-width: 600px) {
+
+@media only screen and (min-width: 600px){
+
   /* For tablets: */
-  .col-m-1 {width: 8.33%;}
-  .col-m-2 {width: 16.66%;}
-  .col-m-3 {width: 25%;}
-  .col-m-4 {width: 33.33%;}
-  .col-m-5 {width: 41.66%;}
-  .col-m-6 {width: 50%;}
-  .col-m-7 {width: 58.33%;}
-  .col-m-8 {width: 66.66%;}
-  .col-m-9 {width: 75%;}
-  .col-m-10 {width: 83.33%;}
-  .col-m-11 {width: 91.66%;}
-  .col-m-12 {width: 100%;}
-}
-@media only screen and (min-width: 768px) {
-  /* For desktop: */
-  .col-1 {width: 8.33%;}
-  .col-2 {width: 16.66%;}
-  .col-3 {width: 25%;}
-  .col-4 {width: 33.33%;}
-  .col-5 {width: 41.66%;}
-  .col-6 {width: 50%;}
-  .col-7 {width: 58.33%;}
-  .col-8 {width: 66.66%;}
-  .col-9 {width: 75%;}
-  .col-10 {width: 83.33%;}
-  .col-11 {width: 91.66%;}
-  .col-12 {width: 100%;}
-}
-h2{
-    	
-  margin-left:200px;
+  .col-m-1 {
+    width: 8.33%;
+  }
+  .col-m-2 {
+    width: 16.66%;
+  }
+  .col-m-3 {
+    width: 25%;
+  }
+  .col-m-4 {
+    width: 33.33%;
+  }
+  .col-m-5 {
+    width: 41.66%;
+  }
+  .col-m-6 {
+    width: 50%;
+  }
+  .col-m-7 {
+    width: 58.33%;
+  }
+  .col-m-8 {
+    width: 66.66%;
+  }
+  .col-m-9 {
+    width: 75%;
+  }
+  .col-m-10 {
+    width: 83.33%;
+  }
+  .col-m-11 {
+    width: 91.66%;
+  }
+  .col-m-12 {
+    width: 100%;
+  }
 }
 
-li{
-  display:block;
+@media only screen and (min-width: 768px) {
+  /* For desktop: */
+  .col-1 {
+    width: 8.33%;
+  }
+  .col-2 {
+    width: 16.66%;
+  }
+  .col-3 {
+    width: 25%;
+  }
+  .col-4 {
+    width: 33.33%;
+  }
+  .col-5 {
+    width: 41.66%;
+  }
+  .col-6 {
+    width: 50%;
+  }
+  .col-7 {
+    width: 58.33%;
+  }
+  .col-8 {
+    width: 66.66%;
+  }
+  .col-9 {
+    width: 75%;
+  }
+  .col-10 {
+    width: 83.33%;
+  }
+  .col-11 {
+    width: 91.66%;
+  }
+  .col-12 {
+    width: 100%;
+  }
+}
+
+
+
+li {
+  display: block;
 }
 
 header {
-padding: .35em;
-width: 100%;
-background-color:black ;
+  padding: 15px;
+  width: 100%;
+  background-color: black;
 }
 
 header h1 {
-display: inline;
-margin-top: 0;
+  display: inline;
+  
 }
 
 header,
-nav {
-display: inline-block;
+ {
+  display: inline-block;
 }
 
-
-
-
-nav {
-float: right;
-font-size: 1.5em;
-background-color:yellowgreen;
+/* Add a black background color to the top navigation */
+.nav {
+  background-color: #333;
+  overflow: hidden;
 }
 
-nav ul {
-margin: 0;
-display: inline;
-padding-right: .15em;
-}
-
-nav ul li {
-display: inline-block;
-list-style: none;
-padding: .36em 0.9375em;
-}
-
-nav a {
-text-decoration: none;
-}
-
-#feature1{
+/* Style the links inside the navigation bar */
+.nav a {
   float: left;
-  margin: 10px;
-}
-#feature2{
-  float: left;
-  margin: 10px;
-}
-#feature3{
-  float: left;
-  margin: 10px;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
 }
 
+/* Change the color of links on hover */
+.nav a:hover {
+  background-color: #ddd;
+  color: black;
+}
 
+/* Add an active class to highlight the current page */
+.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+/* Hide the link that should open and close the topnav on small screens */
+.nav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .nav a:not(:first-child) {display: none;}
+  .nav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .nav.responsive {position: relative;}
+  .nav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .nav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+
+}
