--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -150,7 +150,7 @@ li {
 header {
   padding: 15px;
   width: 100%;
-  background-color: black;
+  background-color: blue;
 }
 
 header h1 {
@@ -163,6 +163,7 @@ header,
   display: inline-block;
 }
 
+//NAV BAR STUFF
 /* Add a black background color to the top navigation */
 .nav {
   background-color: #333;
@@ -218,4 +219,44 @@ header,
     text-align: left;
   }
 
+}
+
+//FOR IMAGES ONLY
+
+/* CSS Reset */
+* { margin: 0; padding: 0; }
+
+/* Basic Responsive Image */
+img {
+  width: 100%;
+  height: auto;
+}
+/* Responsive Images in Columns */
+.two-columns {
+  width: 48%;
+  display: inline-block;
+}
+.three-columns {
+  width: 32%;
+  display: inline-block;
+}
+/* Responsive Images with Conditional Breakpoints  */
+
+.breakpoint { /* One column for smartphones */
+  max-width: 100%;
+  display: inline-block;
+}
+@media (min-width: 420px) { /* Two columns for tablets */
+  .breakpoint {
+    max-width: 48%;
+  }
+}
+@media (min-width: 760px) { /* Four columns for large devices */
+  .breakpoint {
+    max-width: 24%;
+  }
+}
+/* Full-width Responsive Image */
+.full {
+  width: 100%;
 }
