Sorted out the SASS file structure

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,17 +1,15 @@
-$padding: 6px;
+header {
+  padding: 15px;
+  width: 100%;
+  background-color: blue;
+}
 
-nav {
-  ul {
-    margin: 0;
-    padding: $padding;
-    list-style: none;
-  }
+header h1 {
+  display: inline;
+  
+}
 
-  li { display: inline-block; }
-
-  a {
-    display: block;
-    padding: $padding 12px;
-    text-decoration: none;
-  }
+header,
+ {
+  display: inline-block;
 }
