--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,262 +1,14 @@
+//Pages
+@import 'pages/home.scss';
+//Base
+@import 'base/typography.scss';
+@import 'base/color.scss';
 
-html {
-  box-sizing: border-box;
-}
-body {
-  font-family: monospace;
-  padding: 0;
-  margin: 0;
-  background: pink;
-}
+//Components
+@import 'components/gallery.scss';
+@import 'components/navigation.scss';
 
-*,
-*:before,
-*after {
-  box-sizing: inherit; //This will inherit the property from the HTML
-}
-
-.grid {
-  width: 100%;
-  display: table;
-  margin: 0 auto;
-}
-
-.grid:before,
-.grid:after,
-.row:before,
-.row:after {
-  content: " ";
-  display: table;
-}
-
-.grid:after,
-.row:after {
-  clear: both;
-}
-
-[class*='col-'] {
-  width: 100%;
-  float: left;
-  min-height: 1px;
-}
-
-.col {
-  float: left;
-  padding: 15px;
-  border: 1px solid red;
-  background-color: whitesmoke;
-  text-align: center;
-  margin: 8px;
-  border-radius: 3px;
-  color: yellowgreen;
-  
-
-}
-
-
-/* For mobile phones: */
-
-[class*="col-"] {
-  width: 100%;
-}
-
-@media only screen and (min-width: 600px){
-
-  /* For tablets: */
-  .col-m-1 {
-    width: 8.33%;
-  }
-  .col-m-2 {
-    width: 16.66%;
-  }
-  .col-m-3 {
-    width: 25%;
-  }
-  .col-m-4 {
-    width: 33.33%;
-  }
-  .col-m-5 {
-    width: 41.66%;
-  }
-  .col-m-6 {
-    width: 50%;
-  }
-  .col-m-7 {
-    width: 58.33%;
-  }
-  .col-m-8 {
-    width: 66.66%;
-  }
-  .col-m-9 {
-    width: 75%;
-  }
-  .col-m-10 {
-    width: 83.33%;
-  }
-  .col-m-11 {
-    width: 91.66%;
-  }
-  .col-m-12 {
-    width: 100%;
-  }
-}
-
-@media only screen and (min-width: 768px) {
-  /* For desktop: */
-  .col-1 {
-    width: 8.33%;
-  }
-  .col-2 {
-    width: 16.66%;
-  }
-  .col-3 {
-    width: 25%;
-  }
-  .col-4 {
-    width: 33.33%;
-  }
-  .col-5 {
-    width: 41.66%;
-  }
-  .col-6 {
-    width: 50%;
-  }
-  .col-7 {
-    width: 58.33%;
-  }
-  .col-8 {
-    width: 66.66%;
-  }
-  .col-9 {
-    width: 75%;
-  }
-  .col-10 {
-    width: 83.33%;
-  }
-  .col-11 {
-    width: 91.66%;
-  }
-  .col-12 {
-    width: 100%;
-  }
-}
-
-
-
-li {
-  display: block;
-}
-
-header {
-  padding: 15px;
-  width: 100%;
-  background-color: blue;
-}
-
-header h1 {
-  display: inline;
-  
-}
-
-header,
- {
-  display: inline-block;
-}
-
-//NAV BAR STUFF
-/* Add a black background color to the top navigation */
-.nav {
-  background-color: #333;
-  overflow: hidden;
-}
-
-/* Style the links inside the navigation bar */
-.nav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-/* Change the color of links on hover */
-.nav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-/* Add an active class to highlight the current page */
-.active {
-  background-color: #4CAF50;
-  color: white;
-}
-
-/* Hide the link that should open and close the topnav on small screens */
-.nav .icon {
-  display: none;
-}
-
-@media screen and (max-width: 600px) {
-  .nav a:not(:first-child) {display: none;}
-  .nav a.icon {
-    float: right;
-    display: block;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .nav.responsive {position: relative;}
-  .nav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .nav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-
-}
-
-//FOR IMAGES ONLY
-
-/* CSS Reset */
-* { margin: 0; padding: 0; }
-
-/* Basic Responsive Image */
-img {
-  width: 100%;
-  height: auto;
-}
-/* Responsive Images in Columns */
-.two-columns {
-  width: 48%;
-  display: inline-block;
-}
-.three-columns {
-  width: 32%;
-  display: inline-block;
-}
-/* Responsive Images with Conditional Breakpoints  */
-
-.breakpoint { /* One column for smartphones */
-  max-width: 100%;
-  display: inline-block;
-}
-@media (min-width: 420px) { /* Two columns for tablets */
-  .breakpoint {
-    max-width: 48%;
-  }
-}
-@media (min-width: 760px) { /* Four columns for large devices */
-  .breakpoint {
-    max-width: 24%;
-  }
-}
-/* Full-width Responsive Image */
-.full {
-  width: 100%;
-}
+//Layout
+@import 'layout/grid.scss';
+@import 'layout/header.scss';
+@import 'layout/grid.scss';
