Added social media icons to footer

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,6 +7,7 @@
 //Components
 @import 'components/gallery.scss';
 @import 'components/navigation.scss';
+@import 'components/footer.scss';
 
 //Layout
 @import 'layout/grid.scss';
