--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -4,6 +4,10 @@
   padding: 20px;
   text-align: center;
 }
+h4
+{
+  margin:  1% 0 1% 0;
+}
 hr {
   margin: 30px 20px;
   border-top: 2px solid #1c1e26;
@@ -46,9 +50,7 @@ hr {
 .social-icons.icon-rounded .fa {
   border-radius: 5px;
 }
-.social-icons.icon-flat .fa {
-  border-radius: 0;
-}
+
 
 .social-icons .fa:hover,
 .social-icons .fa:active {
