Need to sort out Nav bar

--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -3,11 +3,9 @@
 #footer {
   padding: 20px;
   text-align: center;
+  background-color: transparent;
 }
-h4
-{
-  margin:  1% 0 1% 0;
-}
+
 hr {
   margin: 30px 20px;
   border-top: 2px solid #1c1e26;
