Changed background colour

--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -4,9 +4,13 @@
 
 $dosis: 'Dosis', sans-serif;
 $bungee: 'Bungee', cursive; 
-
+h3{
+  color: black;
+  font-family: $bungee;
+}
 h4
 {
+  font-family: $dosis;
   color: #070709;
   margin:  1% 0 1% 0;
 }
