--- a/src/sass/layout/_grid.scss
+++ b/src/sass/layout/_grid.scss
@@ -28,7 +28,7 @@
     float: left;
     padding: 15px;
     border: 1px solid red;
-    background-color: whitesmoke;
+    background-color: transparent;
     text-align: center;
     margin: 8px;
     border-radius: 3px;
