--- a/src/sass/layout/_forms.scss
+++ b/src/sass/layout/_forms.scss
@@ -1,17 +1,3 @@
-$padding: 6px;
-
-nav {
-  ul {
-    margin: 0;
-    padding: $padding;
-    list-style: none;
-  }
-
-  li { display: inline-block; }
-
-  a {
-    display: block;
-    padding: $padding 12px;
-    text-decoration: none;
-  }
-}
+.contact form input 
+		{flex-basis: 100%
+		margin: 0 0 20px 0}
