--- a/src/sass/pages/_features.scss
+++ b/src/sass/pages/_features.scss
@@ -1,57 +1,20 @@
-.index {
-	font: normal 16px $font_0;
-	color: $color_fuscous_gray_approx;
-	}
-	
-	/*----------------------
- 	Features Section
-----------------------*/
+.features {
+	background-color: $color_black_haze_approx
+	.grid li 
+		padding: 0 30px
+		flex-basis: 33%
+		text-align: center
+		i 
+			font-size: 50px
+			color: $color_dodger_blue_approx
+			margin-bottom: 25px
 
-.features{
-	background-color: #f7f7f7;
-}
+		h4 
+			color: $color_fuscous_gray_approx
+			font-size: 20px
+			margin-bottom: 25px
 
-.features .grid li{
-	padding: 0 30px;
-	flex-basis: 33%;
-	text-align: center;
-}
+		p 
+			margin: 0
 
-.features .grid li i{
-    font-size: 50px;
-    color: #2196F3;
-    margin-bottom: 25px;
-}
-
-.features .grid li h4{
-	color: #555;
-    font-size: 20px;
-    margin-bottom: 25px;
-}
-
-.features .grid li p{
-    margin: 0;
-}
-
-@media (max-width: 1000px){
-
-	.features .grid li{
-		flex-basis: 70%;
-		margin-bottom: 65px;
-	}
-
-	.features .grid li:last-child{
-		margin-bottom: 0;
-	}
-
-}
-
-
-@media (max-width: 600px){
-
-	.features .grid li{
-		flex-basis: 100%;
-	}
-
-}
-
+)
