--- a/src/sass/pages/_hero.scss
+++ b/src/sass/pages/_hero.scss
@@ -1,50 +1,53 @@
-.index {
-	font: normal 16px $font_0;
-	color: $color_fuscous_gray_approx;
+.hero {
+	position: relative
+	justify-content: center
+	min-height: 100vh
+	color: $white
+	text-align: center
+	.background-image 
+		position: absolute
+		top: 0
+		left: 0
+		width: 100%
+		height: 100%
+		background-size: cover
+		background-color: $color_dodger_blue_approx
+		z-index: -1
+		&:after 
+			content: ''
+			position: absolute
+			top: 0
+			left: 0
+			width: 100%
+			height: 100%
+			background-color: $color_mako_approx
+			opacity: 0.75
+}
+
+	h1 {
+		font: bold 60px $font_1, $font_0
+		margin-bottom: 15px
 	}
-	.hero .background-image:after{
-		content: '';
-		position: absolute;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		background-color: #414a4f;
-		opacity: 0.75;
+	h3 {
+		font: normal 28px $font_1, $font_0
+		margin-bottom: 40px
 	}
-	
-	.hero h1{
-		font: bold 60px 'Open Sans', sans-serif;
-		margin-bottom: 15px;
+
+	a.btn {
+		padding: 20px 46px
 	}
-	
-	.hero h3{
-		font: normal 28px 'Open Sans', sans-serif;
-		margin-bottom: 40px;
+
+
+@media(max-width: 800px) {
+	.hero {
+		min-height: 600px
 	}
-	
-	.hero a.btn{
-		padding: 20px 46px;
-	}
-	
-	@media (max-width: 800px){
-	
-		.hero{
-			min-height: 600px;
+		h1 {
+			font-size: 48px
 		}
-	
-		.hero h1{
-			font-size: 48px;
+		h3 {
+			font-size: 24px
 		}
-	
-		.hero h3{
-			font-size: 24px;
-		}
-	
-		.hero a.btn{
-			padding: 15px 40px;
-		}
-	
+		a.btn {
+			padding: 15px 40px}
 	}
-	
-	
