--- a/src/sass/pages/_our-work.scss
+++ b/src/sass/pages/_our-work.scss
@@ -1,43 +1,3 @@
-.index {
-	font: normal 16px $font_0;
-	color: $color_fuscous_gray_approx;
-	}
-	
-	/*--------------------
- 	Our Work Section
----------------------*/
-
-.оur-work{
-	background-color: #fff;
+.оur-work {
+	background-color: $white
 }
-
-.our-work .grid li{
-	padding: 20px;
-	height: 350px;
-	border-radius: 3px;
-
-	background-clip: content-box;
-	background-size: cover;
-	background-position: center;
-	background-color: #333;
-}
-
-.our-work .grid li.small{
-	flex-basis: 40%;
-}
-
-.our-work .grid li.large{
-	flex-basis: 60%;
-}
-
-
-@media (max-width: 1000px){
-
-	.our-work .grid li.small,
-	.our-work .grid li.large{
-		flex-basis: 100%;
-	}
-
-}
-
-
