--- a/src/sass/pages/_section.scss
+++ b/src/sass/pages/_section.scss
@@ -1,4 +1,19 @@
-.index {
-	font: normal 16px $font_0;
-	color: $color_fuscous_gray_approx;
-  }
+section {
+	{display: flex
+	flex-direction: column
+	align-items: center
+	padding: 125px 100px}
+	p 
+  {  max-width: 800px
+    text-align: center
+    margin-bottom: 35px
+    padding: 0 20px
+    line-height: 2}
+
+	h3.title 
+		{color: $color_mako_approx
+		text-transform: capitalize
+		font: bold 32px $font_1, $font_0
+		margin-bottom: 35px
+		text-align: center}
+}
