--- a/src/sass/pages/_section.scss
+++ b/src/sass/pages/_section.scss
@@ -1,19 +1,19 @@
-section {
-	{display: flex
-	flex-direction: column
-	align-items: center
+section
+	{display: flex;
+	flex-direction: column;
+	align-items: center;
 	padding: 125px 100px}
 	p 
-  {  max-width: 800px
-    text-align: center
-    margin-bottom: 35px
-    padding: 0 20px
+  {  max-width: 800px;
+    text-align: center;
+    margin-bottom: 35px;
+    padding: 0 20px;
     line-height: 2}
 
 	h3.title 
-		{color: $color_mako_approx
-		text-transform: capitalize
-		font: bold 32px $font_1, $font_0
-		margin-bottom: 35px
-		text-align: center}
+		{color: $color_mako_approx;
+		text-transform: capitalize;
+		font: bold 32px $font_1, $font_0;
+		margin-bottom: 35px;
+		text-align: center;}
 }
