--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -14,21 +14,21 @@
 		font-family: $font_2, $font_0;
     }
 	nav {
-		display: flex;
-		li 
+		display: flex; }
+		li {
 			margin: 0 15px;
-			&:first-child 
-				margin-left: 0;
+			&:first-child {
+				margin-left: 0;}
 
-			&:last-child 
-				margin-right: 0;
+			&:last-child {
+				margin-right: 0;}
 
     }
 
 
 @media(max-width: 700px) {
-	header 
-		flex-direction: column;
-		h2 
-            margin-bottom: 15px;
+	header {
+		flex-direction: column;}
+		h2 {
+            margin-bottom: 15px;}
 }
