--- a/src/sass/pages/_reviews.scss
+++ b/src/sass/pages/_reviews.scss
@@ -2,11 +2,11 @@
 	{background-color: $white;
 	}
 	.quote {
-		text-align: center
-		width: 80%
-		font-size: 22px
-		font-weight: 300
-		line-height: 1.5
-		margin-bottom: 20px
-		padding: 0
+		text-align: center;
+		width: 80%;
+		font-size: 22px;
+		font-weight: 300;
+		line-height: 1.5;
+		margin-bottom: 20px;
+		padding: 0;
 	}
