--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -22,6 +22,6 @@
 @import 'layout/header.scss';
 @import 'layout/grid.scss';
 @import 'layout/footer.scss';
-@import 'sidebar.scss';
+@import 'layout/sidebar.scss';
 
 
