--- a/src/sass/pages/_features.scss
+++ b/src/sass/pages/_features.scss
@@ -1,20 +1,21 @@
 .features {
-	background-color: $color_black_haze_approx
-	.grid li 
-		padding: 0 30px
-		flex-basis: 33%
-		text-align: center
-		i 
-			font-size: 50px
-			color: $color_dodger_blue_approx
-			margin-bottom: 25px
+	background-color: $color_black_haze_approx;}
 
-		h4 
-			color: $color_fuscous_gray_approx
-			font-size: 20px
-			margin-bottom: 25px
+	.grid li {
+		padding: 0 30px;
+		flex-basis: 33%;
+		text-align: center; 
+		 
+			font-size: 50px;
+			color: $color_dodger_blue_approx;
+			margin-bottom: 25px;}
 
-		p 
-			margin: 0
+		h4 {
+			color: $color_fuscous_gray_approx;
+			font-size: 20px;
+			margin-bottom: 25px;
+		}
+		p {
+			margin: 0;
 
-)
+}
