--- a/src/sass/pages/_hero.scss
+++ b/src/sass/pages/_hero.scss
@@ -4,27 +4,27 @@
 	min-height: 100vh;
 	color: $white;
 	text-align: center;
-	.background-image 
-		{position: absolute;
+}
+	.background-image {
+		position: absolute;
 		top: 0;
 		left: 0;
 		width: 100%;
 		height: 100%;
 		background-size: cover;
 		background-color: $color_dodger_blue_approx;
-		z-index: -1;
-		&:after}
-		
-			content: '';
-			position: absolute;
-			top: 0;
-			left: 0;
-			width: 100%;
-			height: 100%;
-			background-color: $color_mako_approx;
-			opacity: 0.75;}
-
-
+		z-index:-1;
+	}
+			&:after {
+				content: '';
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				background-color: $color_mako_approx;
+				opacity: 0.75;
+			}
 	h1 {
 		font: bold 60px $font_1, $font_0;
 		margin-bottom: 15px;
@@ -51,4 +51,5 @@
 		}
 		a.btn {
 			padding: 15px 40px}
-	}
+		}
+	
