--- a/src/sass/pages/_section.scss
+++ b/src/sass/pages/_section.scss
@@ -2,7 +2,8 @@ section
 	{display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding: 125px 100px}
+	padding: 125px 100px;
+}
 	p 
   {  max-width: 800px;
     text-align: center;
@@ -15,5 +16,5 @@ section
 		text-transform: capitalize;
 		font: bold 32px $font_1, $font_0;
 		margin-bottom: 35px;
-		text-align: center;}
+		text-align: center;
 }
