--- a/src/sass/pages/_hero.scss
+++ b/src/sass/pages/_hero.scss
@@ -2,7 +2,7 @@
 	position: relative;
 	justify-content: center;
 	min-height: 100vh;
-	color: $white;
+	color: white;
 	text-align: center;
 }
 	.background-image {
@@ -12,17 +12,17 @@
 		width: 100%;
 		height: 100%;
 		background-size: cover;
-		background-color: $color_dodger_blue_approx;
+		background-color: $dodger-blue-approx;
 		z-index:-1;
 	}
-			&:after {
+			:after {
 				content: '';
 				position: absolute;
 				top: 0;
 				left: 0;
 				width: 100%;
 				height: 100%;
-				background-color: $color_mako_approx;
+				background-color: $colors-mako-approx;
 				opacity: 0.75;
 			}
 	h1 {
