Same issue, SASS doesnt like the colors

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,7 +8,7 @@
 
 //Base
 @import 'base/typography.scss';
-@import 'base/color.scss';
+@import 'base/_color.scss';
 @import 'base/other.scss';
 @import 'base/reset.scss';
 
