--- a/src/sass/pages/_hero.scss
+++ b/src/sass/pages/_hero.scss
@@ -12,7 +12,7 @@
 		width: 100%;
 		height: 100%;
 		background-size: cover;
-		background-color: $dodger-blue-approx;
+		background-color: $color-dodger-blue-approx;
 		z-index:-1;
 	}
 			:after {
