Fixed SASS issue apparently

--- a/src/sass/base/_color.scss
+++ b/src/sass/base/_color.scss
@@ -2,8 +2,8 @@
 //colors
 $color_fuscous_gray_approx: #555;
 
-$dodger-blue-approx: #2196f3;
-$colors-mako-approx: #414a4f;
+$color-dodger-blue-approx: #2196f3;
+$color-mako-approx: #414a4f;
 $color_mine_shaft_approx: #333;
 $color_black_haze_approx: #f7f7f7;
 $white_60: rgba(255,255,255,0.6);
