--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -7,7 +7,7 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	color: $white;
+	color: white;
     padding: 35px 100px 0;
 }
 	h2 {
