--- a/src/sass/components/_navigation.scss
+++ b/src/sass/components/_navigation.scss
@@ -1,6 +1,6 @@
 ul {
 	list-style: none}
-	&.grid 
+	.grid 
 		{width: 100%;
 		display: flex;
 		flex-wrap: wrap;
@@ -16,11 +16,11 @@ a {
 	cursor: pointer;
 	opacity: 0.9;
 }
-	&:hover 
+	:hover 
 		{opacity: 1
 }
-	&.btn 
-		{color: $white;
+	.btn 
+		{color: white;
 		border-radius: 4px;
 		text-transform: uppercase;
 		background-color: $color_dodger_blue_approx;
