--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -6,7 +6,7 @@ footer {
 	flex-direction: column;
 	align-items: center;
 	text-align: center;
-	color: $white;
+	color: white;
 	background-color: $color_mako_approx;
 	padding: 60px 0;
 }
@@ -16,10 +16,10 @@ footer {
 		font-size: 32px;}
 		li 
 			{margin: 0 8px}
-			&:first-child 
+			:first-child 
 				{margin-left: 0}
 
-			&:last-child 
+			:last-child 
 				{margin-right: 0}
 
 
@@ -30,7 +30,7 @@ footer {
 		color: $white_60;
 		margin-bottom: 10px;}
 		a 
-			{color: $white}
+			{color: white;}
 
 
 
@@ -44,8 +44,8 @@ footer {
 	background-size: cover;
 	background-position: center;
 	background-color: $color_mine_shaft_approx;}
-	&.small 
+	.small 
 		{flex-basis: 40%}
 
-	&.large 
+	.large 
         {flex-basis: 60%}
