--- a/src/sass/pages/_hero.scss
+++ b/src/sass/pages/_hero.scss
@@ -22,7 +22,7 @@
 				left: 0;
 				width: 100%;
 				height: 100%;
-				background-color: $colors-mako-approx;
+				background-color: $color-mako-approx;
 				opacity: 0.75;
 			}
 	h1 {
