--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -220,13 +220,27 @@ header nav li:last-child{
 
 }
 
+/*---------------------
+ 	About Section
+---------------------*/
+
+.about{
+	background-color: #DCDCDC;
+}
+
+
+
+
+
+
+	
 
 
 /*--------------------
  	Our Work Section
 ---------------------*/
 
-.оur-work{
+.our-work{
 	background-color: #fff;
 }
 
@@ -266,7 +280,7 @@ header nav li:last-child{
 ----------------------*/
 
 .features{
-	background-color: #f7f7f7;
+	background-color: #DCDCDC;
 }
 
 .features .grid li{
@@ -361,7 +375,7 @@ header nav li:last-child{
 ---------------------*/
 
 .contact{
-	background-color: #f7f7f7;
+background-color: #DCDCDC;
 }
 
 .contact form{
@@ -449,5 +463,4 @@ footer p a{
 	}
 
 }
-
 
