--- a/src/sass/base/_color.scss
+++ b/src/sass/base/_color.scss
@@ -1,11 +1,8 @@
-
 //colors
 $color_fuscous_gray_approx: #555;
-
-$color-dodger-blue-approx: #2196f3;
-$color-mako-approx: #414a4f;
+$white: #fff;
+$color_dodger_blue_approx: #2196f3;
+$color_mako_approx: #414a4f;
+$color_alto_approx: #dcdcdc;
 $color_mine_shaft_approx: #333;
-$color_black_haze_approx: #f7f7f7;
 $white_60: rgba(255,255,255,0.6);
-
-
