--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,51 +1,32 @@
-.footer {
-    padding: 80px 15px
-}
 footer {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	text-align: center;
-	color: white;
+	color: $white;
 	background-color: $color_mako_approx;
 	padding: 60px 0;
-}
-	ul 
-		{display: flex;
+	ul {
+		display: flex;
 		margin-bottom: 25px;
-		font-size: 32px;}
-		li 
-			{margin: 0 8px}
-			:first-child 
-				{margin-left: 0}
-
-			:last-child 
-				{margin-right: 0}
-
-
-
-	p 
-		{text-transform: uppercase;
+		font-size: 32px;
+		li {
+			margin: 0 8px;
+			&:first-child {
+				margin-left: 0;
+			}
+			&:last-child {
+				margin-right: 0;
+			}
+		}
+	}
+	p {
+		text-transform: uppercase;
 		font-size: 14px;
 		color: $white_60;
-		margin-bottom: 10px;}
-		a 
-			{color: white;}
-
-
-
-.our-work .grid li 
-	{padding: 20px;
-	height: 350px;
-	
-	border-radius: 3px;
-	
-	background-clip: content-box;
-	background-size: cover;
-	background-position: center;
-	background-color: $color_mine_shaft_approx;}
-	.small 
-		{flex-basis: 40%}
-
-	.large 
-        {flex-basis: 60%}
+		margin-bottom: 10px;
+		a {
+			color: $white;
+		}
+	}
+}
