--- a/src/sass/pages/_contact.scss
+++ b/src/sass/pages/_contact.scss
@@ -1,24 +1,21 @@
 .contact {
-	background-color: $color_black_haze_approx;
-
-	form{ 
+	background-color: $color_alto_approx;
+	form {
 		display: flex;
 		align-items: center;
 		justify-content: center;
 		flex-wrap: wrap;
 		max-width: 800px;
 		width: 80%;
-	}
-		input{ 
+		input {
 			padding: 15px;
 			flex: 1;
 			margin-right: 30px;
 			font-size: 18px;
 			color: $color_fuscous_gray_approx;
 		}
-		.btn{ 
+		.btn {
 			padding: 18px 42px;
 		}
-
+	}
 }
-
