--- a/src/sass/pages/_hero.scss
+++ b/src/sass/pages/_hero.scss
@@ -2,9 +2,8 @@
 	position: relative;
 	justify-content: center;
 	min-height: 100vh;
-	color: white;
+	color: $white;
 	text-align: center;
-}
 	.background-image {
 		position: absolute;
 		top: 0;
@@ -12,19 +11,19 @@
 		width: 100%;
 		height: 100%;
 		background-size: cover;
-		background-color: $color-dodger-blue-approx;
-		z-index:-1;
+		background-color: $color_dodger_blue_approx;
+		z-index: -1;
+		&:after {
+			content: '';
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			background-color: $color_mako_approx;
+			opacity: 0.75;
+		}
 	}
-			:after {
-				content: '';
-				position: absolute;
-				top: 0;
-				left: 0;
-				width: 100%;
-				height: 100%;
-				background-color: $color-mako-approx;
-				opacity: 0.75;
-			}
 	h1 {
 		font: bold 60px $font_1, $font_0;
 		margin-bottom: 15px;
@@ -33,23 +32,7 @@
 		font: normal 28px $font_1, $font_0;
 		margin-bottom: 40px;
 	}
-
 	a.btn {
-		padding: 20px 46px
+		padding: 20px 46px;
 	}
-
-
-@media(max-width: 800px) {
-	.hero {
-		min-height: 600px
-	}
-		h1 {
-			font-size: 48px
-		}
-		h3 {
-			font-size: 24px
-		}
-		a.btn {
-			padding: 15px 40px}
-		}
-	
+}
