For some reason it's not working

--- a/src/sass/base/_color.scss
+++ b/src/sass/base/_color.scss
@@ -1,4 +1,4 @@
-//colors
+//colours
 $color_fuscous_gray_approx: #555;
 $white: #fff;
 $color_dodger_blue_approx: #2196f3;
@@ -6,3 +6,11 @@ $color_mako_approx: #414a4f;
 $color_alto_approx: #dcdcdc;
 $color_mine_shaft_approx: #333;
 $white_60: rgba(255,255,255,0.6);
+
+
+/* Social Media Colours  */ 
+$color_azure_approx: #3b5998;
+$white: white;
+$color_picton_blue_approx: #55acee;
+$color_deep_cerulean_approx: #007bb5;
+$color_venice_blue_approx: #125688;
