Added a contact form

--- a/src/sass/base/_color.scss
+++ b/src/sass/base/_color.scss
@@ -6,6 +6,7 @@ $color_mako_approx: #414a4f;
 $color_alto_approx: #dcdcdc;
 $color_mine_shaft_approx: #333;
 $white_60: rgba(255,255,255,0.6);
+$color_celeste_approx: #ccc;
 
 
 /* Social Media Colours  */ 
