--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,6 +14,7 @@
 @import 'pages/our-work.scss';
 @import 'pages/reviews.scss';
 @import 'pages/about.scss';
+@import 'pages/contactme.scss';
 
 
 //Components
