Trying to figure out how the Vue JS Clock works

--- a/src/sass/base/_color.scss
+++ b/src/sass/base/_color.scss
@@ -7,6 +7,10 @@ $color_alto_approx: #dcdcdc;
 $color_mine_shaft_approx: #333;
 $white_60: rgba(255,255,255,0.6);
 $color_celeste_approx: #ccc;
+$color_ebony_clay_approx: #26303b;
+$color_outer_space_approx: #2c3540;
+$color_mabel_approx: #daf6ff;
+$color_cerulean_approx: rgba(10, 175, 230, 1);
 
 
 /* Social Media Colours  */ 
@@ -15,3 +19,6 @@ $white: white;
 $color_picton_blue_approx: #55acee;
 $color_deep_cerulean_approx: #007bb5;
 $color_venice_blue_approx: #125688;
+
+
+
