--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -21,6 +21,7 @@
 @import 'components/gallery.scss';
 @import 'components/navigation.scss';
 @import 'components/buttons.scss';
+@import 'components/clock.scss';
 
 //Layout
 @import 'layout/grid.scss';
