Hopefully clock works

--- a/src/sass/base/_color.scss
+++ b/src/sass/base/_color.scss
@@ -11,7 +11,11 @@ $color_ebony_clay_approx: #26303b;
 $color_outer_space_approx: #2c3540;
 $color_mabel_approx: #daf6ff;
 $color_cerulean_approx: rgba(10, 175, 230, 1);
-
+$black: black;
+$color_neon_carrot_approx: rgb(252, 150, 65);
+$color_punch_40_approx: rgba(210, 65, 36, 0.4);
+$color_thunderbird_40_approx: rgba(210, 45, 26, 0.4);
+$color_milano_red_40_approx: rgba(210, 15, 06, 0.4);
 
 /* Social Media Colours  */ 
 $color_azure_approx: #3b5998;
