--- a/src/sass/components/clock.scss
+++ b/src/sass/components/clock.scss
@@ -1,9 +1,9 @@
 
 
 //urls
-$url_0: url(https://fonts.googleapis.com/css?family=Dosis);
 
-@import $url_0;
+
+@import url(https://fonts.googleapis.com/css?family=Dosis);
 body {
 	background-color: $black;
 }
