--- a/src/sass/base/_color.scss
+++ b/src/sass/base/_color.scss
@@ -16,6 +16,12 @@ $color_neon_carrot_approx: rgb(252, 150, 65);
 $color_punch_40_approx: rgba(210, 65, 36, 0.4);
 $color_thunderbird_40_approx: rgba(210, 45, 26, 0.4);
 $color_milano_red_40_approx: rgba(210, 15, 06, 0.4);
+$color_log_cabin_approx: #222;
+$green: #00ff00;
+$black: #000;
+$white_15: rgba(255, 255, 255, .15);
+$black_25: rgba(0, 0, 0, .25);
+$white_10: rgba(255, 255, 255, .1);
 
 /* Social Media Colours  */ 
 $color_azure_approx: #3b5998;
